--- a/style.css
+++ b/style.css
@@ -32,9 +32,6 @@ visibility: hidden;
 }
 
 #result{
-    position: absolute;
-    left: 0;
-    right: 0;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
@@ -91,6 +88,12 @@ button{
 
 #reset{
     transition: .30s ease-in-out;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
 }
 
 .card{
