--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@ body{
 }
 
 .main{
-    position: relative;
     background-position: center;
     text-align: center;
    overflow-x: hidden;
 }
 
+.top-card{
+    position: relative;
+}
 .navbar{
     background: #FAD3E7 !important;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -33,12 +35,20 @@ visibility: hidden;
 
 #result{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin-top: 20%;
+   
 }
 
 .fa-heart-circle-xmark{
     color: rgba(218, 93, 11, 0.918);
     font-size: larger;
 }
+
+
 
 label{
     font-family: 'Anton', sans-serif;
@@ -89,11 +99,6 @@ button{
 #reset{
     transition: .30s ease-in-out;
     height: 100vh;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
 }
 
 .card{
