--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ button{
     transition: .30s ease-in-out;
     height: 50vh;
     margin-top: 40% !important;
+    display: flex;
+    align-items: center;
+     padding: 50px;
 }
 
 .card{
