--- a/style.css
+++ b/style.css
@@ -103,6 +103,12 @@ button{
      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.img-box img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
 .card{
     padding: 15px;
 }
