--- a/style.css
+++ b/style.css
@@ -107,8 +107,9 @@ button{
     width: 100%;
     height: 300px;
     object-fit: cover;
+    margin-top: 30px;
 }
 
 .card{
-    padding: 15px;
+    padding: 15px 0px;
 }
