--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 body{
     overflow-x: hidden !important;
-    background: #FEDEFF;
+    background: #FEDEFF !important;
+    scroll-behavior: smooth !important;
 }
 
 .main{
