--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ button{
 
 @media (min-width: 576px) { 
     #reset{
+        margin-top: 10%;
         padding: 0 !important;
         height: 100vh !important;
         display: flex;
