--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ visibility: hidden;
     position: absolute;
     left: 0;
     right: 0;
-    top: 0;
+    bottom: 0;
 }
 
 .fa-heart-circle-xmark{
