--- a/style.css
+++ b/style.css
@@ -13,11 +13,9 @@ body{
     background-position: center;
     text-align: center;
    overflow-x: hidden;
+   
 }
 
-.top-card{
-    position: relative;
-}
 .navbar{
     background: #FAD3E7 !important;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -34,13 +32,22 @@ body{
 visibility: hidden;
 }
 
-#result{
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+.result{ 
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+#reset{
     position: absolute;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+   
 }
+
 
 .fa-heart-circle-xmark{
     color: rgba(218, 93, 11, 0.918);
@@ -64,10 +71,7 @@ label{
         padding: 5px;
         border-radius: 5px;
     }
-input{
-    width: 100% !important;
-}
-    
+ 
 }
 
 p, .nav-link{
@@ -95,21 +99,6 @@ button{
     padding: 15px !important;
 }
 
-#reset{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-@media (min-width: 576px) { 
-    #reset{
-        padding: 0 !important;
-        height: 100vh !important;
-         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-         overflow-y: hidden;
-    }
- }
 
 .img-box img {
     width: 100%;
