--- a/style.css
+++ b/style.css
@@ -37,10 +37,11 @@ visibility: hidden;
     align-items: center;
     justify-content: center;
     position: relative;
+    overflow-y: hidden !important;
 }
 
 #reset{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
