--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap');
+html,
+body {
+    margin: 0px;
+}
 *{
     box-sizing: border-box;
 }
@@ -41,7 +45,7 @@ visibility: hidden;
 }
 
 #reset{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
