--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ visibility: hidden;
 }
 
 .result{ 
+    height: 100vh;
+    max-height: 100vh;
     display: flex !important;
     align-items: center;
     justify-content: center;
