--- a/style.css
+++ b/style.css
@@ -17,9 +17,12 @@ body{
     background-position: center;
     text-align: center;
    overflow-x: hidden;
-   
+  
 }
 
+top-card{
+    position: relative;
+}
 .navbar{
     background: #FAD3E7 !important;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -35,22 +38,6 @@ body{
  color: rgb(253, 249, 249);
 visibility: hidden;
 }
-
-.result{ 
-    height: 100vh;
-    max-height: 100vh;
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    overflow-y: hidden !important;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-}
-
 
 
 
