--- a/style.css
+++ b/style.css
@@ -1,28 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap');
-html,
-body {
-    margin: 0px;
-}
 *{
     box-sizing: border-box;
 }
 body{
     overflow-x: hidden !important;
-    background: #FEDEFF !important;
-    scroll-behavior: smooth !important;
+    background: #FEDEFF;
 }
 
 .main{
+    position: relative;
     background-position: center;
     text-align: center;
    overflow-x: hidden;
-  
 }
 
-top-card{
-    position: relative;
-}
 .navbar{
     background: #FAD3E7 !important;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -39,14 +31,19 @@ top-card{
 visibility: hidden;
 }
 
+#result{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+}
 
 
 .fa-heart-circle-xmark{
     color: rgba(218, 93, 11, 0.918);
     font-size: larger;
 }
-
-
 
 label{
     font-family: 'Anton', sans-serif;
@@ -63,7 +60,8 @@ label{
         padding: 5px;
         border-radius: 5px;
     }
- 
+
+    
 }
 
 p, .nav-link{
@@ -91,14 +89,10 @@ button{
     padding: 15px !important;
 }
 
-
-.img-box img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    margin-top: 30px;
+#reset{
+    transition: .30s ease-in-out;
 }
 
 .card{
-    padding: 15px 0px;
+    padding: 15px;
 }
