--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     overflow-x: hidden !important;
-    background: rgb(126, 203, 126);
+
 }
 
 .main{
@@ -15,12 +15,8 @@ body{
    overflow-x: hidden;
 }
 
-.findout {
-    display: flex;
-}
-
 .navbar{
-    background: rgb(53, 175, 53) !important;
+    background: rgb(169, 172, 172) !important;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 .navbar-brand{
@@ -28,6 +24,16 @@ body{
     padding: 10px;
     border: 1px solid #a42f6b35;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+#findout{
+    display: flex !important;
+    gap: 5px;
+    max-width: 600px;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid rgb(201, 200, 200);
+    padding: 15px;
+    border-radius: 15px;
 }
 
 
@@ -61,6 +67,7 @@ visibility: hidden;
 label{
     font-family: 'Anton', sans-serif;
     font-size: 40px;
+    background-color: #fad3e72d;
     padding: 5px;
     border-radius: 5px;
 }
@@ -68,6 +75,7 @@ label{
     label{
         font-family: 'Anton', sans-serif;
         font-size: 25px;
+        background-color: #fad3e72d;
         padding: 5px;
         border-radius: 5px;
     }
@@ -98,8 +106,14 @@ p, .nav-link{
 
 button{
     padding: 15px !important;
+  
 }
 
 #reset{
     transition: .30s ease-in-out;
+}
+
+
+.btn-danger{
+    margin-top: 15px !important;
 }
